<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/customer_name"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="22dp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="41dp"
                android:autofillHints="@string/enter_name"/>

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/mobile_number"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="22dp" />

            <EditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="41dp"
                android:autofillHints="@string/enter_mobile_number"/>

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/customer_address"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="22dp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/enter_address"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="41dp"
                android:autofillHints="@string/enter_address"/>

            <TextView
                android:id="@+id/tvAadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/aadhar_number"
                android:textSize="36sp"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="22dp" />

            <EditText
                android:id="@+id/etAadhar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/enter_aadhar_number"
                android:inputType="number"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="41dp"
                android:autofillHints="@string/enter_aadhar_number"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/submit" />

                <Button
                    android:id="@+id/btnViewData"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/view_all_entries" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>